[metadata]
name = g3py
version = 0.2.1
author = Patrick Surry
author_email = patrick.surry@gmail.com
description = Python distributed metrics management for g3
long_description = file: README.md
long_description_content_type = text/markdown
keywords = g3py, g3, SDK, API, FS2020, Microsoft Flight Simulator
url = https://github.com/patricksurry/g3py
project_urls =
    Bug Tracker = https://github.com/patricksurry/g3py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = g3py
python_requires = >=3.7
